[package]
name = "pangpang"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = "1.14"
async-trait = "0.1"
async-recursion = "0.3"
bitflags = "1.3"
thrussh = "0.33"
thrussh-keys = "0.21"
alacritty_terminal = "0.15"
serde = "1.0"
serde_yaml = "0.8"
