[package]
name = "pangpang"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-recursion = "1"
ssh2 = "0.9"
alacritty_terminal = "0.16"
serde = "1"
