[package]
name = "pangpang_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
bitflags = "1.3"
pangpang = { path="../pangpang" }
druid = { git="https://github.com/linebender/druid.git", features=["im"] }

