[package]
name = "pangpang_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
pangpang = { path="../pangpang" }
tokio = "1.14"
#relm4 = { version = "0.4", features = ["tokio"] }
#relm4-components = "0.4"

