[package]
name = "pangpang_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
#sciter-rs = "0.5"
#gtk = { version = "0.4", package = "gtk4" }
pp = { path="../pangpang", package = "pangpang" }
tokio = { version = "1", features = ["full"] }
